@@ -26,3 +26,6 @@ Changed: 20161110130145, Changed by: null, Original value: : DAL.Transactions, N
 Changed: 20161110130224, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Accounts_883FADC060E33EC57228EBC70BB17B094485FC02A2ACCB858EE5251262048CEF, New value: null, Event type: Delete
 Changed: 20161110163134, Changed by: null, Original value: : DAL.Transactions, New value: null, Event type: Create
 Changed: 20161110163203, Changed by: null, Original value: : DAL.Transactions, New value: null, Event type: Create
+Changed: 20161110163716, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Transactions_A4CD73BA524E87DACA215A07D3A8AF912CDAC75F244C9F25A97A7FA77F631EFA, New value: null, Event type: Execute
+Changed: 20161110163822, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Transactions_A4CD73BA524E87DACA215A07D3A8AF912CDAC75F244C9F25A97A7FA77F631EFA, New value: null, Event type: Delete
+Changed: 20161110164614, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Accounts_883FADC060E33EC57228EBC70BB17B094485FC02A2ACCB858EE5251262048CEF, New value: null, Event type: Delete
